--- a/ekf_params/my_ekf_wheel_imu.yaml
+++ b/ekf_params/my_ekf_wheel_imu.yaml
@@ -17,13 +17,13 @@ ekf_se_odom:
 
   odom0: wheel/odom
   odom0_config: [true, true, false,
-                 false, false, false,
+                 false, false, true,
                  true,  true,  true,
                  false, false, true,
                  false, false, false]
 
   odom0_nodelay: true
-  odom0_differential: false
+  odom0_differential: true
   odom0_relative: false
   #   ======== ADVANCED PARAMETERS ======== 
   odom0_queue_size: 10
