--- a/ekf_params/my_ekf_wheel_imu.yaml
+++ b/ekf_params/my_ekf_wheel_imu.yaml
@@ -28,6 +28,21 @@ ekf_se_odom:
   #   ======== ADVANCED PARAMETERS ======== 
   odom0_queue_size: 10
 
+  odom1: camera/odom
+  odom1_config: [true, true, true,
+                 false, false, false,
+                 true,  true,  true,
+                 false, false, false,
+                 false, false, false]
+
+  odom1_nodelay: true
+  odom1_differential: true
+  odom1_relative: false
+  #   ======== ADVANCED PARAMETERS ======== 
+  odom1_queue_size: 10
+
+
+
   imu0: imu/data
   imu0_config: [false, false, false,
                 true,  true,  true,
@@ -37,9 +52,9 @@ ekf_se_odom:
 
   imu0_nodelay: false
   imu0_differential: false
-  imu0_relative: false
+  imu0_relative: true
   #   ======== ADVANCED PARAMETERS ======== 
-  imu0_queue_size: 10
+  imu0_queue_size: 50
 
   imu0_remove_gravitational_acceleration: true
 
