--- a/ekf_params/my_ekf_wheel_imu.yaml
+++ b/ekf_params/my_ekf_wheel_imu.yaml
@@ -16,47 +16,48 @@ ekf_se_odom:
 #  The order of the values is x, y, z, roll, pitch, yaw, vx, vy, vz, vroll, vpitch, vyaw, ax, ay, az. -->
 
   odom0: wheel/odom
-  odom0_config: [true, true, false,
-                 false, false, true,
-                 true,  true,  true,
-                 false, false, true,
-                 false, false, false]
+  odom0_config: [true, true, true,    #  x, y, z, 
+                 false, false, true,   #  roll, pitch, yaw
+                 true,  true,  true,   #  vx, vy, vz,
+                 false, true, true,   #  vroll, vpitch, vyaw,
+                 false, false, false]  #  ax, ay, az
 
   odom0_nodelay: true
-  odom0_differential: true
+  odom0_differential: false
   odom0_relative: false
   #   ======== ADVANCED PARAMETERS ======== 
   odom0_queue_size: 10
 
+
   odom1: camera/odom
-  odom1_config: [true, true, true,
-                 false, false, false,
-                 true,  true,  true,
-                 false, false, false,
-                 false, false, false]
+  odom1_config: [true, true, false,     #  x, y, z false, 
+                 true, true, true,     #  roll, pitch, yaw,
+                 true,  true,  true,   #  vx, vy, vz,
+                 false, false, false,  #  vroll, vpitch, vyaw,
+                 false, false, false]  #  ax, ay, az
 
   odom1_nodelay: true
-  odom1_differential: true
+  odom1_differential: false
   odom1_relative: false
   #   ======== ADVANCED PARAMETERS ======== 
   odom1_queue_size: 10
 
 
 
-  imu0: imu/data
-  imu0_config: [false, false, false,
-                true,  true,  true,
-                false, false, false,
-                true,  true,  true,
-                false,  false,  false]
-
-  imu0_nodelay: false
-  imu0_differential: false
-  imu0_relative: true
+#  imu0: imu/data
+#  imu0_config: [false, false, false,   #  x, y, z,
+#                true,  true,  true,    #  roll, pitch, yaw,
+#                false, false, false,   #  vx, vy, vz,
+#                true,  true,  true,    #  vroll, vpitch, vyaw,
+#                false,  false,  false] #  ax, ay, az
+#
+#  imu0_nodelay: false
+#  imu0_differential: false
+#  imu0_relative: false
   #   ======== ADVANCED PARAMETERS ======== 
-  imu0_queue_size: 50
+#  imu0_queue_size: 50
 
-  imu0_remove_gravitational_acceleration: true
+#  imu0_remove_gravitational_acceleration: true
 
   use_control: false
 
