--- a/ekf_params/my_ekf_wheel_imu.yaml
+++ b/ekf_params/my_ekf_wheel_imu.yaml
@@ -1,7 +1,7 @@
 # For parameter descriptions, please refer to the template parameter files for each node.
 
 ekf_se_odom:
-  frequency: 50
+  frequency: 30
   sensor_timeout: 0.1
   two_d_mode: false
   transform_time_offset: 0.0
@@ -18,46 +18,33 @@ ekf_se_odom:
   odom0: wheel/odom
   odom0_config: [true, true, true,    #  x, y, z, 
                  false, false, true,   #  roll, pitch, yaw
-                 true,  true,  true,   #  vx, vy, vz,
-                 false, true, true,   #  vroll, vpitch, vyaw,
+                 true,  false,  false,   #  vx, vy, vz,
+                 false, false, true,   #  vroll, vpitch, vyaw,
                  false, false, false]  #  ax, ay, az
 
   odom0_nodelay: true
-  odom0_differential: false
+  odom0_differential: true
   odom0_relative: false
   #   ======== ADVANCED PARAMETERS ======== 
   odom0_queue_size: 10
 
 
-  odom1: camera/odom
-  odom1_config: [true, true, false,     #  x, y, z false, 
-                 true, true, true,     #  roll, pitch, yaw,
-                 true,  true,  true,   #  vx, vy, vz,
-                 false, false, false,  #  vroll, vpitch, vyaw,
-                 false, false, false]  #  ax, ay, az
 
-  odom1_nodelay: true
-  odom1_differential: false
-  odom1_relative: false
+
+  imu0: mavros/imu/data
+  imu0_config: [false, false, false,   #  x, y, z,
+                true,  true,  true,    #  roll, pitch, yaw,
+                false, false, false,   #  vx, vy, vz,
+                true,  true,  true,    #  vroll, vpitch, vyaw,
+                false,  false,  false] #  ax, ay, az
+
+  imu0_nodelay: false
+  imu0_differential: false
+  imu0_relative: false
   #   ======== ADVANCED PARAMETERS ======== 
-  odom1_queue_size: 10
+  imu0_queue_size: 200
 
-
-
-#  imu0: imu/data
-#  imu0_config: [false, false, false,   #  x, y, z,
-#                true,  true,  true,    #  roll, pitch, yaw,
-#                false, false, false,   #  vx, vy, vz,
-#                true,  true,  true,    #  vroll, vpitch, vyaw,
-#                false,  false,  false] #  ax, ay, az
-#
-#  imu0_nodelay: false
-#  imu0_differential: false
-#  imu0_relative: false
-  #   ======== ADVANCED PARAMETERS ======== 
-#  imu0_queue_size: 50
-
-#  imu0_remove_gravitational_acceleration: true
+  imu0_remove_gravitational_acceleration: true
 
   use_control: false
 
@@ -93,6 +80,11 @@ ekf_se_odom:
                                 0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     1.0,  0,    0,
                                 0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    1.0,  0,
                                 0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    1.0]
+
+
+
+
+
 
 
 
