--- a/ekf_params/my_ekf_wheel_vo.yaml
+++ b/ekf_params/my_ekf_wheel_vo.yaml
@@ -3,7 +3,7 @@
 ekf_se_odom:
   frequency: 50
   sensor_timeout: 0.1
-  two_d_mode: true
+  two_d_mode: false
   transform_time_offset: 0.0
   transform_timeout: 0.0
   print_diagnostics: true
@@ -18,8 +18,8 @@ ekf_se_odom:
   odom0: wheel/odom
   odom0_config: [true, true, true,    #  x, y, z, 
                  false, false, true,   #  roll, pitch, yaw
-                 true,  true,  true,   #  vx, vy, vz,
-                 false, true, true,   #  vroll, vpitch, vyaw,
+                 true,  false,  false,   #  vx, vy, vz,
+                 false, false, true,   #  vroll, vpitch, vyaw,
                  false, false, false]  #  ax, ay, az
 
   odom0_nodelay: true
@@ -30,7 +30,7 @@ ekf_se_odom:
 
 
   odom1: camera/odom
-  odom1_config: [true, true, false,     #  x, y, z false, 
+  odom1_config: [true, true, true,     #  x, y, z false, 
                  true, true, true,     #  roll, pitch, yaw,
                  true,  true,  true,   #  vx, vy, vz,
                  false, false, false,  #  vroll, vpitch, vyaw,
@@ -44,22 +44,7 @@ ekf_se_odom:
 
 
 
-  imu0: imu/data
-  imu0_config: [false, false, false,   #  x, y, z,
-                true,  true,  true,    #  roll, pitch, yaw,
-                false, false, false,   #  vx, vy, vz,
-                true,  true,  true,    #  vroll, vpitch, vyaw,
-                false,  false,  false] #  ax, ay, az
 
-  imu0_nodelay: false
-  imu0_differential: true
-  imu0_relative: false
-  #   ======== ADVANCED PARAMETERS ======== 
-  imu0_queue_size: 50
-
-  imu0_remove_gravitational_acceleration: true
-
-  use_control: false
 
   process_noise_covariance: [0.005, 0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
                                                   0,    0.005, 0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
@@ -96,130 +81,7 @@ ekf_se_odom:
 
 
 
-ekf_se_map:
-  frequency: 30
-  sensor_timeout: 0.1
-  two_d_mode: true
-  transform_time_offset: 0.0
-  transform_timeout: 0.0
-  print_diagnostics: true
-  debug: false
-  publish_tf: false
 
-  map_frame: map
-  odom_frame: odom
-  base_link_frame: base_link
-  world_frame: map
-
-  odom0: wheel/odom
-  odom0_config: [true, true, true,    #  x, y, z, 
-                 false, false, true,   #  roll, pitch, yaw
-                 true,  true,  true,   #  vx, vy, vz,
-                 false, true, true,   #  vroll, vpitch, vyaw,
-                 false, false, false]  #  ax, ay, az
-
-  odom0_nodelay: true
-  odom0_differential: false
-  odom0_relative: false
-  #   ======== ADVANCED PARAMETERS ======== 
-  odom0_queue_size: 10
-
-
-  odom1: camera/odom
-  odom1_config: [true, true, false,     #  x, y, z false, 
-                 true, true, true,     #  roll, pitch, yaw,
-                 true,  true,  true,   #  vx, vy, vz,
-                 false, false, false,  #  vroll, vpitch, vyaw,
-                 false, false, false]  #  ax, ay, az
-
-  odom1_nodelay: true
-  odom1_differential: false
-  odom1_relative: false
-  #   ======== ADVANCED PARAMETERS ======== 
-  odom1_queue_size: 10
-
-
-
-
-  odom2: odometry/gps
-  odom2_config: [true,  true,  false,   #  x, y, z
-                 true, true, true,      #  roll, pitch, yaw,
-                 false, false, false,   #  vx, vy, vz,
-                 false, false, false,   #  vroll, vpitch, vyaw,
-                 false, false, false]   #  ax, ay, az
-  odom2_queue_size: 10
-  odom2_nodelay: true
-  odom2_differential: true
-  odom2_relative: false
-
-
-  imu0: imu/data
-  imu0_config: [false, false, false,   #  x, y, z,
-                true,  true,  true,    #  roll, pitch, yaw,
-                false, false, false,   #  vx, vy, vz,
-                true,  true,  true,    #  vroll, vpitch, vyaw,
-                false,  false,  false] #  ax, ay, az
-
-  imu0_nodelay: false
-  imu0_differential: true
-  imu0_relative: false
-  #   ======== ADVANCED PARAMETERS ======== 
-  imu0_queue_size: 50
-
-
-  imu0_remove_gravitational_acceleration: true
-
-  use_control: false
-
-  process_noise_covariance: [1.0,  0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
-                             0,    1.0,  0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
-                             0,    0,    1e-3, 0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
-                             0,    0,    0,    0.3,  0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
-                             0,    0,    0,    0,    0.3,  0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
-                             0,    0,    0,    0,    0,    0.01, 0,     0,     0,    0,    0,    0,    0,    0,    0,
-                             0,    0,    0,    0,    0,    0,    0.5,   0,     0,    0,    0,    0,    0,    0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0.5,   0,    0,    0,    0,    0,    0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0.1,  0,    0,    0,    0,    0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0.3,  0,    0,    0,    0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0.3,  0,    0,    0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0.3,  0,    0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0.3,  0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0.3,  0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0.3]
-
-  initial_estimate_covariance: [1.0,  0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
-                                0,    1.0,  0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
-                                0,    0,    1e-9, 0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
-                                0,    0,    0,    1.0,  0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
-                                0,    0,    0,    0,    1.0,  0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
-                                0,    0,    0,    0,    0,    1e-9, 0,    0,    0,    0,     0,     0,     0,    0,    0,
-                                0,    0,    0,    0,    0,    0,    1.0,  0,    0,    0,     0,     0,     0,    0,    0,
-                                0,    0,    0,    0,    0,    0,    0,    1.0,  0,    0,     0,     0,     0,    0,    0,
-                                0,    0,    0,    0,    0,    0,    0,    0,    1.0,  0,     0,     0,     0,    0,    0,
-                                0,    0,    0,    0,    0,    0,    0,    0,    0,    1.0,   0,     0,     0,    0,    0,
-                                0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     1.0,   0,     0,    0,    0,
-                                0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     1.0,   0,    0,    0,
-                                0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     1.0,  0,    0,
-                                0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    1.0,  0,
-                                0,    0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    1.0]
-
-
-
-
-
-
-
-
-navsat_transform:
-  frequency: 30
-  delay: 3.0
-  magnetic_declination_radians: 0.0429351  # For lat/long 55.944831, -3.186998
-  yaw_offset: 1.570796327  # IMU reads 0 facing magnetic north, not east
-  zero_altitude: false
-  broadcast_utm_transform: true
-  publish_filtered_gps: true
-  use_odometry_yaw: false
-  wait_for_datum: false
 
 
 
