--- a/ekf_params/my_ekf_wheel_vo_imu_gps.yaml
+++ b/ekf_params/my_ekf_wheel_vo_imu_gps.yaml
@@ -3,7 +3,7 @@
 ekf_se_odom:
   frequency: 30
   sensor_timeout: 0.1
-  two_d_mode: true
+  two_d_mode: false
   transform_time_offset: 0.0
   transform_timeout: 0.0
   print_diagnostics: true
@@ -99,7 +99,7 @@ ekf_se_odom:
 ekf_se_map:
   frequency: 30
   sensor_timeout: 0.1
-  two_d_mode: true
+  two_d_mode: false
   transform_time_offset: 0.0
   transform_timeout: 0.0
   print_diagnostics: true
