--- a/config/midTank/global_costmap_params.yaml
+++ b/config/midTank/global_costmap_params.yaml
@@ -1,31 +1,42 @@
 global_costmap:
-    footprint: [[-0.12, -0.19], [-0.12, 0.19], [0.12, 0.19], [0.12, -0.19]]
-    #robot_radius: 0.1
-    footprint_padding: 0.01
-    transform_tolerance: 1.0
-    update_frequency: 4.0
-    publish_frequency: 2.0
+#    footprint: [[-0.12, -0.19], [-0.12, 0.19], [0.12, 0.19], [0.12, -0.19]]
+#    robot_radius: 0.1
 
-    global_frame: map
-    robot_base_frame: base_link
-    resolution: 0.05
 
-    rolling_window: false
-    track_unknown_space: true
+   footprint_padding: 0.01
 
-    plugins: 
-        - {name: static,           type: "costmap_2d::StaticLayer"}            
-        - {name: sensor,           type: "costmap_2d::ObstacleLayer"}
-        - {name: inflation,        type: "costmap_2d::InflationLayer"}
+   track_unknown_space: true
 
-    static:        
-        map_topic: /map 
-        subscribe_to_updates: true
+   global_frame: /map
+   robot_base_frame: /base_link
 
-    sensor:
-        observation_sources: base_scan
-        base_scan: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+   update_frequency: 4.0    # <!-- rbx1  value="1.0"/-->
+   publish_frequency: 2.0     # <!-- rbx1  value="0"/-->
 
-    inflation:
-        inflation_radius: 0.55
-        cost_scaling_factor: 7.0
+   static_map: true
+   rolling_window: false
+
+   resolution: 0.05          # <!-- rbx1  value="0.01"/-->
+   transform_tolerance: 1.0
+   map_type: costmap
+
+
+
+
+
+#    plugins: 
+#        - {name: static,           type: "costmap_2d::StaticLayer"}            
+#        - {name: sensor,           type: "costmap_2d::ObstacleLayer"}
+#        - {name: inflation,        type: "costmap_2d::InflationLayer"}
+
+#    static:        
+#        map_topic: /map 
+#        subscribe_to_updates: true
+
+#    sensor:
+#        observation_sources: base_scan
+#        base_scan: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+
+#   inflation:
+#        inflation_radius: 0.55
+#        cost_scaling_factor: 7.0
