--- a/config/midTank/local_costmap_params.yaml
+++ b/config/midTank/local_costmap_params.yaml
@@ -1,28 +1,34 @@
 local_costmap:
-    footprint: [[-0.12, -0.19], [-0.12, 0.19], [0.12, 0.19], [0.12, -0.19]]
-    #robot_radius: 0.1
-    footprint_padding: 0.01
-    transform_tolerance: 1.0
-    update_frequency: 4.0
-    publish_frequency: 2.0
+#    footprint: [[-0.12, -0.19], [-0.12, 0.19], [0.12, 0.19], [0.12, -0.19]]
+#robot_radius: 0.1
 
-    global_frame: odom
-    robot_base_frame: base_link
-    resolution: 0.05
-    static_map: false
-    rolling_window: true
-    width: 0.5
-    height: 0.5
-    resolution: 0.05
 
-    plugins:            
-        - {name: sensor,     type: "costmap_2d::ObstacleLayer"}
-        - {name: inflation,  type: "costmap_2d::InflationLayer"}
 
-    sensor:
-        observation_sources: base_scan
-        base_scan: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+   footprint_padding: 0.01
 
-    inflation:
-        inflation_radius: 0.55
-        cost_scaling_factor: 10.0
+   global_frame: /odom
+   robot_base_frame: /base_link
+
+   update_frequency: 4.0
+   publish_frequency: 2.0
+
+   static_map: false
+   rolling_window: true
+
+   width: 0.5     # <!-- rbx1  value="6.0"/-->
+   height: 0.5    # <!-- rbx1  value="6.0"/-->
+   resolution: 0.05  # <!-- rbx1  value="0.01"/-->
+   transform_tolerance: 1.0
+   map_type: costmap
+
+#    plugins:            
+#        - {name: sensor,     type: "costmap_2d::ObstacleLayer"}
+#        - {name: inflation,  type: "costmap_2d::InflationLayer"}
+
+#    sensor:
+#        observation_sources: base_scan
+#        base_scan: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+
+#    inflation:
+
+#        cost_scaling_factor: 10.0
