--- a/config/midTank/costmap_common_params.yaml
+++ b/config/midTank/costmap_common_params.yaml
@@ -2,11 +2,16 @@ obstacle_range: 2.5
 raytrace_range: 3.0
 
 footprint: [[-0.19, -0.12], [-0.19, 0.12], [0.19, 0.12], [0.19, -0.12]]
+footprint_padding: 0.01
 #robot_radius: 0.1
 
 
 inflation_radius: 0.05
 
+
+
+NavfnROS:
+    allow_unknown: true
 
 max_obstacle_height: 0.6
 min_obstacle_height: 0.0
