--- a/config/midTank/rtabmap/base_local_planner_params.yaml
+++ b/config/midTank/rtabmap/base_local_planner_params.yaml
@@ -1,66 +1,41 @@
-controller_frequency: 10.0
-#recovery_behavior_enabled: false
-#clearing_rotation_allowed: false
-
 TrajectoryPlannerROS:
 
-   max_vel_x: 0.4
-#   min_vel_x: 0.1
-   min_vel_x: -0.05
+  # Current limits based on AZ3 standalone configuration.
+  acc_lim_x:  0.75
+  acc_lim_y:  0.75
+  acc_lim_theta: 4
+  # min_vel_x and max_rotational_vel were set to keep the ICR at
+  # minimal distance of 0.48 m. 
+  # Basically, max_rotational_vel * rho_min <= min_vel_x
+  max_vel_x:  0.2
+  min_vel_x:  0.05
+  max_vel_theta: 0.5
+  min_vel_theta: -0.5
+  min_in_place_vel_theta: 0.25
+  holonomic_robot: true
 
-   max_vel_y: 0.0  # zero for a differential drive robot
-   min_vel_y: 0.0
+  xy_goal_tolerance:  0.25
+  yaw_goal_tolerance: 0.25
+  latch_xy_goal_tolerance: true
+  
+  # make sure that the minimum velocity multiplied by the sim_period is less than twice the tolerance on a goal. Otherwise, the robot will prefer to rotate in place just outside of range of its target position rather than moving towards the goal.
+  sim_time: 1.5 # set between 1 and 2. The higher he value, the smoother the path (though more samples would be required).
+  sim_granularity: 0.025
+  angular_sim_granularity: 0.05
+  vx_samples: 12
+  vtheta_samples: 20
 
-   max_vel_theta: 1.0
-   min_vel_theta: -1.0
+  meter_scoring: true
 
-   min_in_place_vel_theta: 0.4
-   escape_vel: -0.1
+  pdist_scale: 0.7 # The higher will follow more the global path.
+  gdist_scale: 0.8
+  occdist_scale: 0.01
+  publish_cost_grid_pc: false
 
-   acc_lim_theta: 1.2
-   acc_lim_x: 0.9
-   acc_lim_y: 0.0  # zero for a differential drive robot
-
-
-   holonomic_robot: false
-
-   sim_time: 3.0                  #  different
-   sim_granularity: 0.05          #  different
-
-   yaw_goal_tolerance: 0.1 # about 6 degrees   # different
-   xy_goal_tolerance: 0.05  # 5 cm            #  different
-   latch_xy_goal_tolerance: false              #  different
-   prune_plan: true                             #  different
-
-   vx_samples: 8                                 #  different
-   vy_samples: 0  # zero for a differential drive robot
-   vtheta_samples: 20   
-
-
-
-   pdist_scale: 0.8
-   gdist_scale: 0.4
-   meter_scoring: true
-
-
-   heading_lookahead: 0.325
-   heading_scoring: false
-   heading_scoring_timestep: 0.8
-   occdist_scale: 0.05
-   oscillation_reset_dist: 0.05
-   publish_cost_grid_pc: false
-
-
-
-   angular_sim_granularity: 0.1
-
-
-   dwa: true
-   simple_attractor: false
+#move_base
+controller_frequency: 10.0 #The robot can move faster when higher.
 
 #global planner 
 NavfnROS:
     allow_unknown: true
     visualize_potential: false
-
-
