--- a/config/midTank/rtabmap/costmap_common_params_2d.yaml
+++ b/config/midTank/rtabmap/costmap_common_params_2d.yaml
@@ -1,17 +1,8 @@
-#obstacle_range: 2.5
-#raytrace_range: 3.0
-
-footprint: [[-0.19, -0.12], [-0.19, 0.12], [0.19, 0.12], [0.19, -0.12]]
-footprint_padding: 0.04    # rbx1 no
-# robot_radius: 0.1
+footprint: [[ 0.3,  0.3], [-0.3,  0.3], [-0.3, -0.3], [ 0.3, -0.3]]
+footprint_padding: 0.04
 inflation_layer:
-  inflation_radius: 0.2 # 2xfootprint, it helps to keep the global planned path farther from obstacles
+  inflation_radius: 0.7 # 2xfootprint, it helps to keep the global planned path farther from obstacles
 transform_tolerance: 2
-
-
-origin_x: -2.0
-origin_y: -2.0
-
 
 obstacle_layer:
   obstacle_range: 2.5
@@ -19,39 +10,34 @@ obstacle_layer:
   max_obstacle_height: 0.4
   track_unknown_space: true
 
-
-  observation_sources: laser_scan_sensor # point_cloud_sensorB
+  observation_sources: laser_scan_sensor point_cloud_sensorA point_cloud_sensorB
 
   laser_scan_sensor: {
     data_type: LaserScan,
     topic: scan,
-    expected_update_rate: 1.5,
+    expected_update_rate: 0.1,
     marking: true,
     clearing: true
   }
 
+  point_cloud_sensorA: {
+    sensor_frame: base_footprint,
+    data_type: PointCloud2,
+    topic: obstacles_cloud,
+    expected_update_rate: 0.5,
+    marking: true,
+    clearing: true,
+    min_obstacle_height: 0.04
+  }
 
-#  point_cloud_sensorB: {
-#    sensor_frame: base_link,
-#    data_type: PointCloud2,
-#    topic: ground_cloud rtabmap/cloud_ground,
-#   topic: rtabmap/cloud_ground,
-#    expected_update_rate: 0.5,
-#    marking: false,
-#   clearing: true,
-#    min_obstacle_height: -1.0 # make sure the ground is not filtered
-#  }
+  point_cloud_sensorB: {
+    sensor_frame: base_footprint,
+    data_type: PointCloud2,
+    topic: ground_cloud,
+    expected_update_rate: 0.5,
+    marking: false,
+    clearing: true,
+    min_obstacle_height: -1.0 # make sure the ground is not filtered
+  }
 
 
-
-# NavfnROS:                   # rbx1 no
-#     allow_unknown: true   # rbx1 no
-
-#max_obstacle_height: 0.6
-#min_obstacle_height: 0.0
-#observation_sources: scan
-#scan: {data_type: LaserScan, topic: /scan, marking: true, clearing: true, expected_update_rate: 0.5}
-
-#    sensor:
-#        observation_sources: base_scan
-#        base_scan: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true, expected_update_rate: 0}
