--- a/config/midTank/rtabmap/local_costmap_params_2d.yaml
+++ b/config/midTank/rtabmap/local_costmap_params_2d.yaml
@@ -1,52 +1,51 @@
-local_costmap:
-#    footprint: [[-0.12, -0.19], [-0.12, 0.19], [0.12, 0.19], [0.12, -0.19]]
-#robot_radius: 0.1
-
-
-   global_frame: /odom
-#   global_frame: /map       #  rbx1 fake setting
-   robot_base_frame: /base_link
-
-   update_frequency: 4.0   #  rbx1 3
-   publish_frequency: 2.0   #  rbx1 1
-
-
-   static_map: false
-   rolling_window: true
-#   static_map: true      #  rbx1 fake setting
-#   rolling_window: false   #  rbx1 fake setting
-
-
-
-#   width: 0.5     # <!-- rbx1  value="6.0"/-->
-   width: 6.0     # <!-- rbx1  value="6.0"/-->
-#   height: 0.5    # <!-- rbx1  value="6.0"/-->
-   height: 6.0    # <!-- rbx1  value="6.0"/-->
-
-
-#  origin_x: -2.0
-#   origin_y: -2.0
-
-   resolution: 0.01  # <!-- rbx1  value="0.01"/-->
-#   resolution: 0.05  # <!-- rbx1  value="0.01"/-->
-   transform_tolerance: 1.0
-
-   map_type: costmap   #  rbx1 no
+global_frame: odom
+robot_base_frame: base_footprint
+update_frequency: 2.0
+publish_frequency: 2.0
+rolling_window: true
+width: 4.0
+height: 4.0
+resolution: 0.025
+origin_x: -2.0
+origin_y: -2.0
 
 plugins:
-  - {name: obstacle_layer,   type: "costmap_2d::ObstacleLayer"}
+  - {name: obstacle_layer,      type: "costmap_2d::ObstacleLayer"}
   - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
 
+obstacle_layer:
+  obstacle_range: 2.5
+  raytrace_range: 3.0
+  max_obstacle_height: 0.4
+  track_unknown_space: true
+ 
+  observation_sources: laser_scan_sensor point_cloud_sensorA point_cloud_sensorB
 
+  laser_scan_sensor: {
+    data_type: LaserScan, 
+    topic: base_scan, 
+    expected_update_rate: 0.2, 
+    marking: true, 
+    clearing: true
+  }
 
-#    plugins:            
-#        - {name: sensor,     type: "costmap_2d::ObstacleLayer"}
-#        - {name: inflation,  type: "costmap_2d::InflationLayer"}
+  point_cloud_sensorA: {
+    sensor_frame: base_footprint,
+    data_type: PointCloud2, 
+    topic: obstacles_cloud, 
+    expected_update_rate: 0.5, 
+    marking: true, 
+    clearing: true,
+    min_obstacle_height: 0.04
+  }
 
-#    sensor:
-#        observation_sources: base_scan
-#        base_scan: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+  point_cloud_sensorB: {
+    sensor_frame: base_footprint,
+    data_type: PointCloud2,
+    topic: ground_cloud,
+    expected_update_rate: 0.5,
+    marking: false,
+    clearing: true,
+    min_obstacle_height: -1.0 # make usre the ground is not filtered
+  }
 
-#    inflation:
-
-#        cost_scaling_factor: 10.0
