--- a/config/midTank/rbx1/base_local_planner_params.yaml
+++ b/config/midTank/rbx1/base_local_planner_params.yaml
@@ -4,25 +4,26 @@ clearing_rotation_allowed: false
 
 TrajectoryPlannerROS:
 
-   max_vel_x: 0.15   # 0.3
+   max_vel_x: 0.2  # 0.3
    min_vel_x: -0.05  # 0.05
 
    max_vel_y: 0.0  # zero for a differential drive robot
    min_vel_y: 0.0
 
-
+   max_vel_theta: 2.0
+   min_vel_theta: 0.5
 
    min_in_place_vel_theta: 0.4
    escape_vel: -0.1
 
 
-   acc_lim_x: 1.0
+   acc_lim_x: 2.0
    acc_lim_y: 0.0 # zero for a differential drive robot
    acc_lim_theta: 1.0
 
    holonomic_robot: false
-   yaw_goal_tolerance: 0.1 # about 6 degrees
-   xy_goal_tolerance: 0.05  # 10 cm
+   yaw_goal_tolerance: 0.3 # about 6 degrees
+   xy_goal_tolerance: 0.1  # 10 cm
    latch_xy_goal_tolerance: false
    pdist_scale: 0.8
    gdist_scale: 0.4
@@ -36,7 +37,7 @@ TrajectoryPlannerROS:
    publish_cost_grid_pc: false
    prune_plan: true
 
-   sim_time: 5.0
+   sim_time: 3.0
    sim_granularity: 0.025
    angular_sim_granularity: 0.025
    vx_samples: 8
