--- a/ekf_params/my_ekf_wheel_imu.yaml
+++ b/ekf_params/my_ekf_wheel_imu.yaml
@@ -9,21 +9,25 @@ ekf_se_odom:
   print_diagnostics: true
   debug: false
 
+
+  map_frame: map
   odom_frame: odom
   base_link_frame: base_link
   world_frame: odom
+
+
 
 #  The order of the values is x, y, z, roll, pitch, yaw, vx, vy, vz, vroll, vpitch, vyaw, ax, ay, az. -->
 
   odom0: wheel/odom
   odom0_config: [true, true, true,    #  x, y, z, 
                  false, false, true,   #  roll, pitch, yaw
-                 true,  false,  false,   #  vx, vy, vz,
+                 true,  true,  true,   #  vx, vy, vz,
                  false, false, true,   #  vroll, vpitch, vyaw,
                  false, false, false]  #  ax, ay, az
 
   odom0_nodelay: true
-  odom0_differential: true
+  odom0_differential: false
   odom0_relative: false
   #   ======== ADVANCED PARAMETERS ======== 
   odom0_queue_size: 10
@@ -31,7 +35,7 @@ ekf_se_odom:
 
 
 
-  imu0: mavros/imu/data
+  imu0: imu/data
   imu0_config: [false, false, false,   #  x, y, z,
                 true,  true,  true,    #  roll, pitch, yaw,
                 false, false, false,   #  vx, vy, vz,
@@ -39,12 +43,12 @@ ekf_se_odom:
                 false,  false,  false] #  ax, ay, az
 
   imu0_nodelay: false
-  imu0_differential: false
+  imu0_differential: true
   imu0_relative: false
   #   ======== ADVANCED PARAMETERS ======== 
-  imu0_queue_size: 200
+  imu0_queue_size: 100
 
-  imu0_remove_gravitational_acceleration: true
+  imu0_remove_gravitational_acceleration: false
 
   use_control: false
 
